<resources>
    <string name="app_name">LoadApp</string>
    <string name="button_loading">We are loading</string>
    <string name="button_download">Download</string>
    <string name="background_description">dark green background</string>
    <string name="download_icon_description">purple download icon</string>
    <string name="option1">Glide - Image Loading Library by BumpTech</string>
    <string name="option2">LoadApp - Current repository by Udacity</string>
    <string name="option3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_notification_channel_id">download_channel</string>
    <string name="download_notification_channel_name">LoadApp</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_message">The Project 3 repository is downloaded</string>
    <string name="notification_button_text">Check the status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>